--- a/AliceResume-main/index.html
+++ b/AliceResume-main/index.html
@@ -59,7 +59,7 @@
     fields: [
       { 
         type: "email", 
-        label: "Email:", 
+        label: "Your Email:", 
         name: "email",
         required: true,
         placeholder: "your@email.com"
