--- a/index.html
+++ b/index.html
@@ -48,45 +48,27 @@
 
 
 
-    <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
-<script>
-  /* paste this line in verbatim */
-  window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments)};
-  /* customize formbutton below*/     
-  formbutton("create", {
-    action: "https://formspree.io/f/xknekdqw",
-    title: "How can we help?",
-    fields: [
-      { 
-        type: "email", 
-        label: "Your Email:", 
-        name: "email",
-        required: true,
-        placeholder: "your@email.com"
-      },
-      {
-        type: "textarea",
-        label: "Message:",
-        name: "message",
-        placeholder: "What's on your mind?",
-      },
-      { type: "submit" }      
-    ],
-    styles: {
-      title: {
-        backgroundColor: "gray"
-      },
-      button: {
-        backgroundColor: "gray"
-      }
-    }
-  });
-</script>
 
-    
-    <div id="buttons">
-    </br /></br /><h4><button type="button">Contact Me</button></h4>
-    </div>
+<div id="buttons">
+</br /><h7><button onclick="showContent()" type="button">Contact Me!</button></h7/>
+  <div id="content_to_show">
+    <p><form
+      action="https://formspree.io/f/xknekdqw"
+      method="POST"
+    >
+      <label>
+        <h8>Your email:</h8>
+        <input type="email" name="email">
+      </label>
+      <label>
+        <h8>Enter Message:</h8>
+        <textarea name="message"></textarea>
+      </label>
+      <!-- your other form fields go here -->
+      <button type="submit">Send</button>
+    </form>.</p>
+  </div>
+</div>
 
     <!-- my script thing -->
     <script src="script.js"></script>
